# forest_fire

./: .gitignore  README.md
docs/: README.md
docs/PaperImages/: .$LLM复核与告警处置流程图.drawio.bkp  .$用户注册登录流程图.drawio.bkp  .$系统功能模块图2.drawio.bkp  .$系统数据库ER图.drawio.bkp  .$系统架构图.drawio.bkp  .$视频流接入与YOLO巡检流程图.drawio.bkp  LLM复核与告警处置流程图.drawio  用户注册登录流程图.drawio  系统功能模块图.drawio  系统功能模块图2.drawio  系统数据库ER图.drawio  系统架构图.drawio  视频流接入与YOLO巡检流程图.drawio
docs/prompts/: 全局初始化.md  环境配置.md  论文初稿草稿.md  项目说明.md
forest_fire_backend/: .gitignore  main.py  pyproject.toml  requirements.txt
forest_fire_backend/app/: config.py  main.py  seeds.py  test_alert.py
forest_fire_backend/app/models/: __init__.py  admin.py  alert.py  supervisor.py  user.py
forest_fire_backend/app/routers/: admin.py  alerts.py  auth.py  stream.py  supervisor.py  ws.py
forest_fire_backend/app/utils/: security.py
forest_fire_backend/backups/: forest_fire_backup_20260309_214938.sql
forest_fire_backend/media/: README.md  火灾警报.m4a
forest_fire_frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
forest_fire_frontend/src/: App.vue  main.js  style.css
forest_fire_frontend/src/api/: backend.js  index.js
forest_fire_frontend/src/layouts/: MainLayout.vue
forest_fire_frontend/src/router/: index.js
forest_fire_frontend/src/stores/: theme.js  user.js
forest_fire_frontend/src/views/: Announcements.vue  Backup.vue  Cameras.vue  Dashboard.vue  History.vue  Login.vue  NoticeBoard.vue  Profile.vue  ShiftLogs.vue  Stats.vue  SystemConfig.vue  (+3 more)
prompt/: 功能需求.md  开发计划.md  项目说明.md
